--- a/Entrega I/01.Historia.tex
+++ b/Entrega I/01.Historia.tex
@@ -90,7 +90,7 @@ Por aquella época sufrió crisis en varios aspectos de su vida. En lo personal, s
 
 Tras el final de la guerra, en 1919, Schoenberg fundó la Sociedad para Interpretaciones Musicales Privadas junto a sus discípulos y amigos Alban Berg y Anton Webern. Schoenberg, Berg y Webern se autodenominaron la Segunda Escuela de Viena en honor al grupo de compositores del siglo XVIII Haydn, Mozart y Beethoven, quienes formaban la Primera Escuela de Viena.
 
-En la Sociedad para Interpretaciones Musicales Privadas se presentaban música contemporánea en circunstancias que favorecieran su adecuada apreciación. Así se evitaba que dichas obras, al no ser entendidas por el público, fueran inmediatamente rechazadas. Las obras de compositores como Mahler, Debussy, Bartók, Ravel, Strauss y Stravinsky se incluyeron en los programas de conciertos organizados por la Sociedad.
+En la Sociedad para Interpretaciones Musicales Privadas se presentaba música contemporánea en circunstancias que favorecieran su adecuada apreciación. Así se evitaba que dichas obras, al no ser entendidas por el público, fueran inmediatamente rechazadas. Las obras de compositores como Mahler, Debussy, Bartók, Ravel, Strauss y Stravinsky se incluyeron en los programas de conciertos organizados por la Sociedad.
 
 En este contexto Schoenberg pudo reflexionar sobre sus técnicas compositivas, y al fin publicó en 1923 su ensayo \emph{Método de composición con doce sonidos}~\cite{scho}, donde se describían por primera vez los axiomas del dodecafonismo. Estos axiomas constituían la solución al problema de la atonalidad libre que tanto le había estado atormentando durante una década.
 
