--- a/Entrega I/Serialismo-matematicas.tex
+++ b/Entrega I/Serialismo-matematicas.tex
@@ -79,7 +79,7 @@ En las siguientes entregas de Divulgamat tendremos a una autora invitada, Celia 
 	\input{01.Historia}%
 	\input{02.Dodecafonismo}%
 	\input{03.Suite}%
-%	\input{00.Permutaciones}%
+	\input{00.Permutaciones}%
 
 \bibliographystyle{plain}
 \bibliography{Serialismo-matematicas.bib}
