--- a/Entrega II/Serialismo-matematicas.bib
+++ b/Entrega II/Serialismo-matematicas.bib
@@ -23,6 +23,35 @@
   note = {\url{https://www.researchgate.net/publication/322881117_How_Rare_Is_Symmetry_in_Musical_12-Tone_Rows}},
 }
 
+@misc{gom-1,
+author       = {Gómez, Paco},
+title        = {\textit{Mathematics and Computation in Music 2019}: un congreso interdisciplinar},
+howpublished = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18184:98-junio-2019-mathematics-and-computation-in-music-2019-un-congreso-interdisciplinar&catid=67:ma-y-matemcas&directory=67}},
+type         = {web page},
+url          = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18184:98-junio-2019-mathematics-and-computation-in-music-2019-un-congreso-interdisciplinar&catid=67:ma-y-matemcas&directory=67}},
+year         = {julio de 2019},
+note         = {Consultado en agosto de 2019}
+}
+
+@misc{gom-2,
+author       = {Gómez, Paco},
+title        = {\textit{Crónica del congreso Mathematics and Computation in Music 2019}},
+howpublished = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18206:99-agosto-2019-cronica-del-congreso-mathematics-and-computation-in-music-2019&catid=67:ma-y-matemcas&directory=67}},
+type         = {web page},
+url          = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18206:99-agosto-2019-cronica-del-congreso-mathematics-and-computation-in-music-2019&catid=67:ma-y-matemcas&directory=67}},
+year         = {julio de 2019},
+note         = {Consultado en agosto de 2019}
+} 
+
+@article{celia1,
+author       = {Rubio Madrigal, Celia},
+year         = {septiembre de 2019},
+title        = {{Serialismo y matemáticas - I}},
+journal      = {Divulgamat},
+url          = {\url{url}},
+note = {\url{url}}
+}
+
 @misc{boulez,
   author       = {Boulez, Pierre},
   title        = {{Schoenberg is dead}},
@@ -30,11 +59,11 @@
   type         = {web page},
   url          = {\url{http://www.ubu.com/papers/Boulez-Schoenberg+Is+Dead.pdf}},
   year         = {1952},
-  note         = {Publicado en la revista {\it The Score} originalmente; consultado en l\'inea en agosto de 2019}
+  note         = {Publicado en la revista {\it The Score} originalmente; consultado en agosto de 2019}
 }
 
 @article{entartete,
-  title        = {{Las reglas de la m\'usica y las leyes del Estado: la ``Entartete Musik'' y el Tercer Reich}},
+  title        = {{Las reglas de la música y las leyes del Estado: la ``Entartete Musik'' y el Tercer Reich}},
   author       = {Minguet, Vicent},
   issn         = {1134-8615},
   url          = {\url{https://ebuah.uah.es/dspace/handle/10017/38020}},
@@ -42,7 +71,7 @@
   year         = {2018},
   volume       = {69},
   pages        = {9-29},
-  journal      = {Quodlibet: revista de especializaci\'on musical},
+  journal      = {Quodlibet: revista de especialización musical},
 }
 
 
@@ -55,16 +84,6 @@ year         = {1981},
 note         = {Producido por Barrie Gavin para la serie de BBC ``Horizon''}
 }
 
-
-@misc{stockhausen,
-  author       = {Maconie, Robin},
-  title        = {{Tuning In \textemdash~A Film about Karlheinz Stockhausen}},
-  howpublished = {\url{https://soulvlog.blogspot.com/2018/12/tuning-in-karlheinz-stockhausen-maconie.html}},
-  url          = {\url{https://soulvlog.blogspot.com/2018/12/tuning-in-karlheinz-stockhausen-maconie.html}},
-  year         = {1981},
-  note         = {Producido por Barrie Gavin para la serie de BBC ``Horizon''}
-}
-
 @book{cyclic,
 	title={The Music of Alban Berg},
 	author={Headlam, David John},
@@ -72,7 +91,7 @@ note         = {Producido por Barrie Gavin para la serie de BBC ``Horizon''}
 	lccn={95046936},
 	series={Composers of the twentieth century},
 	url={https://books.google.es/books?id=0bTkoNwLb5AC},
-	howpublished={\url{https://books.google.es/books?id=0bTkoNwLb5AC}},
+	note={\url{https://books.google.es/books?id=0bTkoNwLb5AC}},
 	year={1996},
 	publisher={Yale University Press}
 }
