--- a/Entrega II/04.Grupo.tex
+++ b/Entrega II/04.Grupo.tex
@@ -1,45 +1,46 @@
 \section{El grupo de las transformaciones}\label{ch:grupo}
 \subsection{Nuevas definiciones y nuevas transformaciones}
-		Las f\'ormulas de las transformaciones dodecaf\'onicas quedaron de esta forma:
-				
+		Las fórmulas de las transformaciones dodecafónicas habituales son:
+        
 		\begin{center}
 		$I(\sigma(m))= -\sigma(m) + 2\sigma(0)$\\
 		$T^{k}(\sigma(m))=\ \sigma(m) + k$\\
 		$R(\sigma(m))=\ \sigma(-1-m)$
 		\end{center}
-			
-		Sin embargo, la importancia de estas definiciones radica en qu\'e espectro serial forman, y no en c\'omo se nombra cada serie espec\'ifica. No es distinguible a un nivel musical y, de hecho, hay m\'as de un convenio para ello.
+        
+		Sin embargo, la importancia de estas definiciones radica en qué espectro serial forman, y no en cómo se nombra cada serie específica. No es distinguible a un nivel musical y, de hecho, hay más de un convenio para ello.
 		
-		Han surgido a lo largo de la historia dos m\'etodos para nombrar las series. El primero, el m\'etodo tradicional, se ha usado desde al menos 1945. El segundo, el m\'etodo de tonos absolutos, fue concebido por George Perle~\cite{perle} en su libro \emph{Twelve-Tone Tonality} en 1977.
+		Han surgido a lo largo de la historia al menos dos métodos para nombrar las series. El primero, el método tradicional, se ha usado desde al menos 1945. El segundo, el método de tonos absolutos, fue concebido por George Perle~\cite{perle} en su libro \emph{Twelve-Tone Tonality} en 1977.
 		
-		En el m\'etodo tradicional, $T_0$ se usa para la primera serie que se encuentra en la composici\'on; es decir, la serie original. En cambio, el m\'etodo de tonos absolutos nombra las series $T$ bas\'andose solamente en la nota en la que comienzan: $T_0$ se usa para la serie que comienza por un Do, y as\'i sucesivamente. En ambas, las series transpuestas se nombran como $\Psi_{k}$.
+		En el método tradicional, $T_0$ se usa para la primera serie que se encuentra en la composición; es decir, la serie original. En cambio, el método de tonos absolutos nombra las series $T$ basándose solamente en la nota en la que comienzan: $T_0$ se usa para la serie que comienza por un do, $T^1$ para el re, y así sucesivamente. En ambas, las series transpuestas se nombran como $\Psi_{k}$.
 		
-		Estas nomenclaturas no caracterizan adecuadamente el objeto matem\'atico que deben representar, es decir, funciones aplicadas a las series. Son nombres arbitrarios que adem\'as producen ambig\"uedad al a\~nadir otras funciones o al intentar describirlo matem\'aticamente.
+		Estas nomenclaturas no caracterizan adecuadamente el objeto matemático que deben representar, es decir, funciones aplicadas a las series. Son nombres arbitrarios que además producen ambigüedad al añadir otras funciones \textemdash por ejemplo, si no conmutan\textemdash~o al intentar describirlo matemáticamente.
 		
-		En todo caso, cualquier convenio de notaci\'on tendr\'a f\'ormulas matem\'aticas distintas al resto, pero todas preservan el material compositivo de la obra. Eso quiere decir que se pueden redefinir algunas de las transformaciones, siempre que preserven el sentido musical. 
+		En todo caso, cualquier convenio de notación tendrá fórmulas matemáticas distintas al resto, pero todas preservan el material compositivo de la obra. Eso quiere decir que se pueden redefinir algunas de las transformaciones siempre que preserven el sentido musical. 
 		
-		Por ejemplo, la inversi\'on puede prescindir de ser transportada para que la primera nota coincida con la original. Para distinguirla de la primera definici\'on, \'esta se llamar\'a $S$ de simetr\'ia: $S(\sigma(m)) = -\sigma(m)$.
+		Por ejemplo, la inversión puede prescindir de ser transportada para que la primera nota coincida con la original. Para distinguirla de la primera definición, ésta se llamará $S$ de simetría: $S(\sigma(m)) = -\sigma(m)$.
 		
-		E igual que la inversi\'on es el cambio de signo por fuera, la retrogradaci\'on puede convertirse simplemente en el cambio de signo por dentro. \'Esta se llamar\'a $V$ de volteo: $V(\sigma(m)) = \sigma(-m)$. Si no se a\~nade la transformaci\'on $C$, entonces $V$ no conserva el espectro serial de $\{I,\ T,\ R\}$.
+		E igual que la inversión es el cambio de signo por fuera, la retrogradación puede convertirse simplemente en el cambio de signo por dentro. Ésta se llamará $V$ de volteo: $V(\sigma(m)) = \sigma(-m)$.
 		
-		As\'i quedan dos transformaciones que se asemejan a reflexiones: una por \textit{dentro} y otra por \textit{fuera}; y una adici\'on por \textit{fuera}. Aqu\'i \textit{dentro} significa \textit{antes} de aplicar $\sigma$ y \textit{fuera} significa \textit{despu\'es} de aplicar $\sigma$, ya que no se debe olvidar que $\sigma$, la permutaci\'on, es una funci\'on en s\'i misma. Y ahora surge una cuesti\'on consecuentemente: Â¿cu\'al ser\'ia entonces el resultado de sumar \textit{dentro}, es decir, \textit{antes}?
+		Así quedan dos transformaciones que se asemejan a reflexiones: una por \textit{dentro} y otra por \textit{fuera}; y una adición por \textit{fuera}. Aquí \textit{dentro} significa \textit{antes} de aplicar $\sigma$ y \textit{fuera} significa \textit{después} de aplicar $\sigma$, ya que no se debe olvidar que $\sigma$, la permutación, es una función en sí misma. Y ahora surge una cuestión consecuentemente: ¿cuál sería entonces el resultado de sumar \textit{dentro}, es decir, \textit{antes}?
 		
-		Esta nueva transformaci\'on, cuya aparici\'on resulta natural tras las otras tres, se llama \textit{desplazamiento c\'iclico}. Inventada y usada por Alban Berg~\cite{cyclic}, y en algunas obras primerizas de Schoenberg, $C^{k}$ desplaza el comienzo de la serie $k$ posiciones m\'as all\'a:
-		\[C^{k}(\sigma(m))=\sigma(m+k)\]
-			
+		Esta nueva transformación, cuya aparición resulta natural tras las otras tres, se llama \textit{desplazamiento cíclico}. Inventada y usada por Alban Berg~\cite{cyclic}, y en algunas obras primerizas de Schoenberg, $C^{k}$ desplaza el comienzo de la serie $k$ posiciones más allá:
+		\[C^{k}(\sigma(m))=\sigma(m+k)\]			
 		\[C^{k}=
 		\left(\begin{array}{*{7}c}
 		0&1&2&&9&10&11\\
 		\sigma(k)&\sigma(k+1)&\sigma(k+2)&\cdots&\sigma(k+9)&\sigma(k+10)&\sigma(k+11)\\
 		\end{array}\right)\]
-		
-		La serie 4-c\'iclica sobre la permutaci\'on $P$ de la Suite Op. 25 es la siguiente serie $C^4$:	
+		 
+		 La serie 4-cíclica sobre la permutación $P$ de la Suite Op. 25 es la siguiente serie $C^4$:	
 		\[C^4=\drow{6,3,8,2,11,0,9,10,4,5,7,1}\]		
 		\begin{center}
 			\includegraphics[width=12.1cm]{13.png}
 		\end{center}
 				
-		En resumen, se puede trabajar con un nuevo sistema de definiciones que mantienen el significado musical del serialismo pero var\'ian la notaci\'on con la que se trabaja. 
+		Si no se añade la transformación $C$, entonces $V$ no conserva el espectro serial de $\{I,\ T,\ R\}$, pero si se añade sí se conserva, ya que $V$ es composición de $C$ y $R$.
+		
+		En resumen, se puede trabajar con un nuevo sistema de definiciones que mantienen el significado musical del serialismo pero varían la notación con la que se trabaja. Estas son las nuevas fórmulas de las transformaciones:
 		
 		\begin{multicols}{2}
 		\begin{align*}
@@ -52,26 +53,10 @@
 		C^{k}(\sigma(m)) &= \sigma(m+k)
 		\end{align*}
 		\end{multicols}
-	
-
-%\subsection{Usos del desplazamiento c\'iclico}
-%	
-%	
-%	
-%	
-%	
-%	
-%	
-%	
-%	
-%	
-%	
-%	
-%
 
 	\subsection{Diagramas de reloj}
 	
-		Para visualizar mejor c\'omo act\'uan las distintas transformaciones, las series se pueden representar mediante \textbf{diagramas de reloj}~\cite{hunter}: una sucesi\'on de aristas con una orientaci\'on establecida que conecta los v\'ertices de un dodec\'agono en el orden de la serie. Ya que el desplazamiento c\'iclico act\'ua como si la serie fuese circular, hay a\~nadida una arista desde la \'ultima nota a la primera. El comienzo de la serie y su orientaci\'on se marcan con una flecha.
+		Para visualizar mejor cómo actúan las distintas transformaciones, las series se pueden representar mediante \textbf{diagramas de reloj}~\cite{hunter}: una sucesión de aristas con una orientación establecida que conecta los vértices de un dodecágono en el orden de la serie. Ya que el desplazamiento cíclico actúa como si la serie fuese circular, hay una arista extra que une la última nota a la primera. El comienzo de la serie y su orientación se marcan con una flecha.
 		
 		\begin{figure}[h]
 			\begin{center}				
@@ -79,20 +64,20 @@
 			\end{center}
 		\end{figure} 
 		
-		Arriba se incluye el diagrama de la serie original $\sigma$ de la Suite Op. 25. Se pueden distinguir las caracter\'isticas de la serie, como las tres diagonales, que son los tres intervalos de tritono. A continuaci\'on se incluyen los diagramas de las transformaciones dodecaf\'onicas originales: la transposici\'on, la inversi\'on y la retrogradaci\'on; as\'i como el nuevo desplazamiento c\'iclico.
+		Arriba se incluye el diagrama de la serie original $\sigma$ de la Suite Op. 25. Se pueden distinguir las características de la serie, como las tres diagonales, que son los tres intervalos de tritono. A continuación se incluyen los diagramas de las transformaciones dodecafónicas originales: la transposición, la inversión y la retrogradación; así como el nuevo desplazamiento cíclico.
 		
 	\begin{center}
 		\begin{multicols}{4}
 		\ddiagram[up=4, name=$T^1$, arrow shift=4]{5,6,8,2,7,4,9,3,0,1,10,11}
-		\ddiagram[up=4, name=$R$, arrow shift=4]{10,9,0,11,2,8,3,6,1,7,5,4}
 		\ddiagram[name=$I$, arrow shift=4]{4,3,1,7,2,5,0,6,9,8,11,10}
+		\ddiagram[up=4, name=$R$, arrow shift=4]{10,9,0,11,2,8,3,6,1,7,5,4}
 		\ddiagram[up=4, name=$C^1$]{5,7,1,6,3,8,2,11,0,9,10,4}
 	\end{multicols}
 	\end{center}
 		
-		La transposici\'on es una rotaci\'on en el sentido en el que apunta la flecha; la inversi\'on es una reflexi\'on con el eje de simetr\'ia en la diagonal que pasa por la flecha; la retrogradaci\'on es un cambio de orientaci\'on de la flecha; y el desplazamiento c\'iclico es el avance interno de la flecha por el recorrido de la serie.		
+		La transposición es una rotación en el sentido en el que apunta la flecha; la inversión es una reflexión con el eje de simetría en la diagonal que pasa por la flecha; la retrogradación es un cambio de orientación de la flecha; y el desplazamiento cíclico es el avance interno de la flecha por el recorrido de la serie.		
 		
-		La diferencia entre las inversiones $I$ y $S$ es precisamente la transposici\'on de $2\sigma(0)=8$ semitonos en este ejemplo. Comparando $S$ con $T^0$ se puede adem\'as observar que $S$ es una reflexi\'on con el eje de simetr\'ia en 0, en vez de que el eje dependa de la propia permutaci\'on.
+		La diferencia entre las inversiones $I$ y $S$ es precisamente la transposición de $2\sigma(0)=8$ semitonos en este ejemplo. Comparando $S$ con $T^0$ se puede además observar que $S$ es una reflexión con el eje de simetría en 0, en vez de que el eje dependa de la propia permutación.
 		
 		\begin{center}
 			\begin{multicols}{2}				
@@ -102,7 +87,7 @@
 			\end{multicols}
 		\end{center}
 	
-		Por otro lado, la comparaci\'on entre las retrogradaciones $R$ y $V$ muestra que, aunque en principio m\'as arbitraria, $V$ es una transformaci\'on m\'as natural, ya que deja fija la flecha. La diferencia entre ellas es en realidad un desplazamiento c\'iclico de -1.
+		Por otro lado, la comparación entre las retrogradaciones $R$ y $V$ muestra que, aunque en principio más arbitraria, $V$ es una transformación más natural, ya que deja fija la flecha. La diferencia entre ellas es en realidad un desplazamiento cíclico de -1.
 		
 		\begin{center}
 			\begin{multicols}{2}
@@ -112,16 +97,16 @@
 			\end{multicols}
 		\end{center}
 
-		He creado una p\'agina interactiva que genera diagramas de reloj de cualquier serie para cualquier longitud serial, adem\'as de generar series aleatorias. Tambi\'en se pueden aplicar las transformaciones a la serie, tanto las originales como las del nuevo sistema, para ver c\'omo se comporta el diagrama. Est\'a escrita en Elm y el c\'odigo puede encontrarse en \url{https://gitlab.com/dodecafonismo/diagramas}.
+		He creado una página interactiva que genera diagramas de reloj de cualquier serie para cualquier longitud serial, además de generar series aleatorias. También se pueden aplicar las transformaciones a la serie, tanto las originales como las del nuevo sistema, para ver cómo se comporta el diagrama. Está escrita en Elm y el código puede encontrarse en \url{https://gitlab.com/dodecafonismo/diagramas}.
 	
-		En el enlace \url{https://diagramas.netlify.com} se accede a la aplicaci\'on web. Sus instrucciones de uso se encuentran al final de la p\'agina.
+		En el enlace \url{https://diagramas.netlify.com} se accede a la aplicación web. Sus instrucciones de uso se encuentran al final de la página.
 		
-		Adem\'as, he creado un comando en \LaTeX{} que dibuja estos diagramas dada su serie, y opcionalmente su nombre y el n\'umero que est\'a arriba: \verb|\ddiagram[up=4, name=$T^0$]{4,5,7,1,6,3,8,2,11,0,9,10}| \textemdash en este caso \verb|up=4| no es necesario, ya que por defecto se coloca arriba la primera nota de la serie. El comando se encuentra en el paquete de \LaTeX{} \texttt{ddphonism}, disponible en el enlace \url{https://www.ctan.org/pkg/ddphonism}.
+		Además, he creado un comando en \LaTeX{} que dibuja estos diagramas dada su serie, y opcionalmente su nombre y el número que está arriba: \verb|\ddiagram[up=4, name=$T^0$]{4,5,7,1,6,3,8,2,11,0,9,10}| \textemdash en este caso \verb|up=4| no es necesario, ya que por defecto se coloca arriba la primera nota de la serie. El comando se encuentra en el paquete de \LaTeX{} \texttt{ddphonism}, disponible en el enlace \url{https://www.ctan.org/pkg/ddphonism}.
 	
 	\subsection[El grupo: $D_{12}\times D_{12}$]{El grupo: $\bm{D_{12}\times D_{12}}$}
-		El conjunto de transformaciones $\{S,\ T,\ V,\ C\}$ est\'a compuesto por dos parejas con semejanzas entre s\'i. $S$ es una reflexi\'on y $T$ una rotaci\'on de orden 12 \textemdash es decir, que al aplicarla 12 veces se vuelve a la identidad\textemdash~y ambas se aplican a la figura entera; es como mover el diagrama por el papel. En cambio, $V$ es una reflexi\'on de la flecha en s\'i, y $C$ una rotaci\'on \textemdash tambi\'en de orden 12\textemdash~de la flecha sobre la l\'inea; ambas aplicadas al interior de la figura.
+		El conjunto de transformaciones $\{S,\ T,\ V,\ C\}$ está compuesto por dos parejas con semejanzas entre sí. $S$ es una reflexión y $T$ una rotación de orden 12 \textemdash es decir, que al aplicarla 12 veces se vuelve a la identidad\textemdash~y ambas se aplican a la figura entera; es como mover el diagrama por el papel. En cambio, $V$ es una reflexión de la flecha en sí, y $C$ una rotación \textemdash también de orden 12\textemdash~de la flecha sobre la línea; ambas aplicadas al interior de la figura.
 		
-		Cada pareja genera un grupo muy conocido: el grupo di\'edrico o diedral. Se denota por $D_{12}$ y representa el grupo de simetr\'ias de un pol\'igono regular; en este caso, un dodec\'agono. En otros \'ambitos, $D_n$ tambi\'en se denota por $D_{2n}$, ya que $2*n$ es el n\'umero de elementos que tiene el grupo. Por ejemplo, aqu\'i se muestran todas las simetr\'ias de un oct\'ogono, que son los 16 elementos de $D_{8}$, aplicados a una se\~nal de STOP.
+		Cada pareja genera un grupo muy conocido: el grupo diédrico o diedral. Se denota por $D_{12}$ y representa el grupo de simetrías de un polígono regular; en este caso, un dodecágono. En otros ámbitos, $D_n$ también se denota por $D_{2n}$, ya que $2*n$ es el número de elementos que tiene el grupo. Por ejemplo, aquí se muestran todas las simetrías de un octógono, que son los 16 elementos de $D_{8}$, aplicados a una señal de STOP.
 		
 		\begin{center}
 		\begin{tikzpicture}[scale=2, inner sep=0]
@@ -132,13 +117,13 @@
 		\end{tikzpicture}
 		\end{center}
 	
-		De igual manera, el conjunto de series de un espectro serial se consigue aplicando a la serie las distintas funciones transformativas; se obtiene entonces un grupo di\'edrico para ambas parejas de funciones. 
+		De igual manera, el conjunto de series de un espectro serial se consigue aplicando a la serie las distintas funciones transformativas; se obtiene entonces un grupo diédrico para ambas parejas de funciones. 
 		
-		Al haber dos parejas distintas que act\'uan por separado dentro y fuera de la figura, el grupo completo que forman las cuatro transformaciones es el producto directo de dos copias del di\'edrico: $D_{12}\times D_{12}$.
+		Al haber dos parejas distintas que actúan por separado dentro y fuera de la figura, el grupo completo que forman las cuatro transformaciones es el producto directo de dos copias del diédrico: $D_{12}\times D_{12}$.
 		
-		Podemos observarlo claramente si representamos la serie de una segunda forma: como la correspondencia entre v\'ertices de dos dodec\'agonos. La serie original, que es en realidad una permutaci\'on de 12 elementos, se representa como una funci\'on: los v\'ertices del dodec\'agono interno se env\'ian biyectivamente a los v\'ertices externos. As\'i, $m \longmapsto \sigma(m)$. Este diagrama es similar al matricial pero enroscado en s\'i mismo, de tal forma que se aprecia la permutaci\'on escogida mediante las flechas, que son fijas, y facilita un significado del antes y el despu\'es de aplicarla.
+		Podemos observarlo claramente si representamos la serie de una segunda forma: como la correspondencia entre vértices de dos dodecágonos. La serie original, que es en realidad una permutación de 12 elementos, se representa como una función: los vértices del dodecágono interno se envían biyectivamente a los vértices externos. Así, $m \longmapsto \sigma(m)$. Este diagrama es similar al matricial pero enroscado en sí mismo, de tal forma que se aprecia la permutación escogida mediante las flechas, que son fijas, y facilita un significado del antes y el después de aplicarla.
 		
-		Las dos primeras figuras describen esto mismo: la representaci\'on de la serie original y la representaci\'on de la permutaci\'on mediante las flechas, que se mantendr\'an constantes en el resto de figuras.
+		Las dos primeras figuras describen esto mismo: la representación de la serie original y la representación de la permutación mediante las flechas, que se mantendrán constantes en el resto de figuras.
 		
 			\begin{center}
 				\begin{multicols}{2}
@@ -148,7 +133,7 @@
 			\end{multicols}
 			\end{center}
 	
-		Las cuatro siguientes figuras representan las cuatro funciones transformativas, que son en realidad la reflexi\'on y la rotaci\'on del grupo di\'edrico de cada dodec\'agono. Aplicarlo al de dentro es aplicarlo antes de las flechas; antes de la permutaci\'on. Aplicarlo fuera es transformar despu\'es de las flechas; despu\'es de la permutaci\'on.
+		Las cuatro siguientes figuras representan las cuatro funciones transformativas, que son en realidad la reflexión y la rotación del grupo diédrico de cada dodecágono. Aplicarlo al de dentro es aplicarlo antes de las flechas; antes de la permutación. Aplicarlo fuera es transformar después de las flechas; después de la permutación.
 		
 		\tikzstyle rotateArrow=[decoration={markings,mark=at position 0.9999 with {\arrow[scale=1,>=triangle 45]{>}}},postaction={decorate}]
 		
@@ -180,36 +165,47 @@
 		\end{multicols}
 		\end{center}
 	
-	He creado un comando en \LaTeX{} que dibuja estos diagramas di\'edricos dada su serie original y las funciones aplicadas a ella: \verb|t|, \verb|s|, \verb|c| y \verb|v|. Se aplican en ese mismo orden, y por defecto est\'an a 0. \linebreak \verb|\ddihedral[c=2,t=3,s=1]{4,5,7,1,6,3,8,2,11,0,9,10}|. El comando se encuentra en el paquete de \LaTeX{} \texttt{ddphonism}, disponible en el enlace \url{https://www.ctan.org/pkg/ddphonism}.
+	He creado un comando en \LaTeX{} que dibuja estos diagramas diédricos dada su serie original y las funciones aplicadas a ella: \verb|t|, \verb|s|, \verb|c| y \verb|v|. Se aplican en ese mismo orden, y por defecto están a 0. \linebreak \verb|\ddihedral[c=2,t=3,s=1]{4,5,7,1,6,3,8,2,11,0,9,10}|. El comando se encuentra en el paquete de \LaTeX{} \texttt{ddphonism}, disponible en el enlace \url{https://www.ctan.org/pkg/ddphonism}.
 	
-	\subsection{Conmutatividad entre los elementos del grupo}		
-		La rotaci\'on (r) y la reflexi\'on (s) de un grupo di\'edrico no conmutan, sino que cumplen $r\cdot s=s\cdot r^{-1}$. Por otro lado, en los productos directos los elementos de un lado conmutan con los del otro. As\'i, $\{S,\ T\}$ y $\{V,\ C\}$ no conmutan, pero el resto de parejas s\'i. La verificaci\'on de estas afirmaciones, que confirman que el grupo generado es $D_{12}\times{D}_{12}$, se encuentran a continuaci\'on:
+	\subsection{Conmutatividad entre los elementos del grupo}
+		
+		La rotación (r) y la reflexión (s) de un grupo diédrico no conmutan, sino que cumplen $r\cdot s=s\cdot r^{-1}$. Por otro lado, en los productos directos los elementos de un lado conmutan con los del otro. Así, $\{S,\ T\}$ y $\{V,\ C\}$ no conmutan, pero el resto de parejas sí. La verificación de estas afirmaciones, que confirman que el grupo generado es $D_{12}\times{D}_{12}$, se encuentran a continuación:
+		
+		
+		\newenvironment{absolutelynopagebreak}
+		{\par\nobreak\vfil\penalty0\vfilneg
+			\vtop\bgroup}
+		{\par\xdef\tpd{\the\prevdepth}\egroup
+			\prevdepth=\tpd}
+		
 			\begin{center}
-			\begin{multicols}{3}
-				\ \linebreak
-				\begin{align*}
-				&\ S\circ T(\sigma(m))\\
-				=&\ S(\sigma(m)+1)\\
-				=&\ -(\sigma(m)+1)\\
-				=&\ -\sigma(m)-1
-				\end{align*}
-				
-				\underline{$S$ y $T$ no conmutan:}
-				
-				\begin{align*}
-				&\ T\circ S(\sigma(m))\\
-				=&\ T(-\sigma(m))\\
-				=&\ -\sigma(m)+1
-				\end{align*}			
-				
-				\ \linebreak				
-				\begin{align*}
-				&\ S\circ T^{-1}(\sigma(m))\\
-				=&\ S(\sigma(m)-1)\\
-				=&\ -(\sigma(m)-1)\\
-				=&\ -\sigma(m)+1
-				\end{align*}
-			\end{multicols}
+			\begin{absolutelynopagebreak}
+				\begin{multicols}{3}
+					\ \linebreak
+					\begin{align*}
+					&\ S\circ T(\sigma(m))\\
+					=&\ S(\sigma(m)+1)\\
+					=&\ -(\sigma(m)+1)\\
+					=&\ -\sigma(m)-1
+					\end{align*}
+					
+					\underline{$S$ y $T$ no conmutan:}
+					
+					\begin{align*}
+					&\ T\circ S(\sigma(m))\\
+					=&\ T(-\sigma(m))\\
+					=&\ -\sigma(m)+1
+					\end{align*}			
+					
+					\ \linebreak				
+					\begin{align*}
+					&\ S\circ T^{-1}(\sigma(m))\\
+					=&\ S(\sigma(m)-1)\\
+					=&\ -(\sigma(m)-1)\\
+					=&\ -\sigma(m)+1
+					\end{align*}
+				\end{multicols}
+			\end{absolutelynopagebreak}
 			
 			\begin{multicols}{3}
 				\ \linebreak				
@@ -302,9 +298,9 @@
 			\end{multicols}
 		\end{center}
 		
-		Volviendo a las definiciones originales $\{I,\ T,\ R,\ C\}$, su estructura interna es bien distinta. El problema de $I$ es que depende de la permutaci\'on escogida, por lo que a veces tiene unas propiedades y a veces otras. En cambio, la definici\'on de $V$ con respecto a $R$ es meramente est\'etica: ya que no depende de la permutaci\'on, su conmutatividad se mantiene invariante. 
+		Volviendo a las definiciones originales $\{I,\ T,\ R,\ C\}$, su estructura interna es bien distinta. El problema de $I$ es que depende de la permutación escogida, por lo que a veces tiene unas propiedades y a veces otras. En cambio, la definición de $V$ con respecto a $R$ es meramente estética: ya que no depende de la permutación, su conmutatividad se mantiene invariante. 
 		
-		Viendo c\'omo conmutan los elementos de este sistema se aprecia la dificultad de $I$. Curiosamente, la conmutatividad de $\{I,\ R\}$ e $\{I,\ C\}$ se pierde, pero se gana la de $\{I,\ T\}$. As\'i, $T$ conmuta con todo en el sistema. Esto muestra una ventaja de la definici\'on de $I$.
+		Viendo cómo conmutan los elementos de este sistema se aprecia la dificultad de $I$. Curiosamente, la conmutatividad de $\{I,\ R\}$ e $\{I,\ C\}$ se pierde, pero se gana la de $\{I,\ T\}$. Así, $T$ conmuta con todo en el sistema. Esto muestra una ventaja de la definición de $I$.
 		
 		\begin{multicols}{3}
 			\begin{align*}
@@ -326,7 +322,7 @@
 		\end{align*}
 		\end{multicols}
 		
-		Los \'unicos casos en los que podr\'ian conmutar ocurrir\'ian cuando
+		Los únicos casos en los que podrían conmutar ocurrirían cuando
 		\begin{align*}
 		2\sigma(0)\equiv2\sigma(-1)\ \mbox{(mod. 12)}&\impliedby\\
 		12+2\sigma(0)=2\sigma(-1)&\Longleftrightarrow\\
@@ -334,7 +330,7 @@
 		\sigma(-1)-\sigma(0)=6&
 		\end{align*}
 		
-		Es decir, cuando la primera y la \'ultima nota de la serie original se distancian en 6 semitonos, como es el caso de la permutaci\'on en la Suite Op. 25:
+		Es decir, cuando la primera y la última nota de la serie original se distancian en 6 semitonos, como es el caso de la permutación en la Suite Op. 25:
 		
 		\[
 		IR=RI=\drow{10,11,8,9,6,0,5,2,7,1,3,4}
@@ -361,7 +357,7 @@
 			\end{align*}
 		\end{multicols}
 		
-		Los \'unicos casos en los que podr\'ian conmutar son cuando
+		Los únicos casos en los que podrían conmutar son cuando
 		\begin{align*}
 		2\sigma(0)\equiv2\sigma(1)\ \mbox{(mod. 12)}&\impliedby\\
 		12+2\sigma(0)=2\sigma(1)&\Longleftrightarrow\\
@@ -371,7 +367,7 @@
 		
 		Es decir, cuando la primera y la segunda nota de la serie original se distancian en 6 semitonos.
 		
-		Si se echan las cuentas con $C^{k}$ en vez de con $C^1$, pueden conmutar si $\sigma(k)-\sigma(0)=6$. Como $\sigma$ es una permutaci\'on, devuelve todos los valores de 0 a 11 y solamente una vez cada uno. Por tanto, tambi\'en devuelve 6 + $\sigma(0)$, as\'i que \textbf{siempre existe un \'unico $\bm{k}$ para el que $\bm{I}$ y $\bm{C^{k}}$ conmutan}. En el caso de la permutaci\'on de la Suite Op. 25, como $\sigma(0)=4$ hay que encontrar el $k$ para el que $\sigma(k)=4+6=10$. En este caso, $k=11$, pero depende por completo de la permutaci\'on original.\\
+		Si se echan las cuentas con $C^{k}$ en vez de con $C^1$, pueden conmutar si $\sigma(k)-\sigma(0)=6$. Como $\sigma$ es una permutación, devuelve todos los valores de 0 a 11 y solamente una vez cada uno. Por tanto, también devuelve 6 + $\sigma(0)$, así que \textbf{siempre existe un único $\bm{k}$ para el que $\bm{I}$ y $\bm{C^{k}}$ conmutan}. En el caso de la permutación de la Suite Op. 25, como $\sigma(0)=4$ hay que encontrar el $k$ para el que $\sigma(k)=4+6=10$. En este caso, $k=11$, pero depende por completo de la permutación original.\\
 		
 		\begin{multicols}{3}
 			\begin{align*}
@@ -382,7 +378,7 @@
 			=&\ -\sigma(m)+2\sigma(0)+1
 			\end{align*}
 			
-			\underline{$I$ y $T$ ahora s\'i conmutan:}\\\columnbreak
+			\underline{$I$ y $T$ ahora sí conmutan:}\\\columnbreak
 			
 			\begin{align*}
 			&\ T\circ I(\sigma(m))\\
