--- a/Entrega II/Serialismo-matematicas.tex
+++ b/Entrega II/Serialismo-matematicas.tex
@@ -1,7 +1,6 @@
 \documentclass[a4, 11pt]{article}
 
 \usepackage{microtype}
-%\usepackage[T1]{fontenc} % dejar solo para html
 \usepackage[latin1]{inputenc}
 
 \textwidth = 6.5 in 
@@ -64,17 +63,24 @@
 \begin{document}
 \maketitle 
 
-%En las siguientes entregas de Divulgamat tendremos a una autora invitada, Celia Rubio, quien ha escrito una serie sobre el serialismo y matemáticas. Celia Rubio está cursando el doble grado de Matemáticas e Informática en la Universidad Complutense de Madrid y tiene estudios de música en el Conservatorio de Madrid (su instrumento es la flauta de pico y el canto). Participó activamente en el congreso {\it Mathematics and Computation in Music 2019} (véanse las columnas~\cite{gom-1, gom-2}). Su preocupación e interés por la Teoría Matemática de la Música y su divulgación le empujó a mostrarme su texto.  Tras leerlo detenidamente, le propuse enseguida su publicación en esta columna. El lector disfrutará sin duda alguna de la claridad y la fuerza del texto. 
-	
+%En las siguientes entregas de Divulgamat tendremos a una autora invitada, Celia Rubio, quien ha escrito una serie sobre el serialismo y matemáticas. Celia Rubio está cursando el doble grado de Matemáticas e Informática en la Universidad Complutense de Madrid y tiene estudios de música en el Conservatorio de Madrid (su instrumento es la flauta de pico, y además ha estudiado canto). Participó muy activamente en el congreso {\it Mathematics and Computation in Music 2019} (véanse las columnas~\cite{gom-1, gom-2}). Su preocupación e interés por la Teoría Matemática de la Música y su divulgación le empujó a mostrarme su texto.  Tras leerlo detenidamente y atestiguar su calidad, le propuse enseguida su publicación en esta columna. El lector disfrutará sin duda alguna de la claridad y la fuerza del texto. 
+
 \section{Introducción}
 	
+	Este artículo es el segundo de la colección ``Serialismo y matemáticas''. Las músicas serialistas son aquellas que permiten construir castillos con un solo grano de arena: una serie particular, una permutación de notas, dinámicas o timbres. La serie se coloca en la obra secuencialmente, siempre igual o con alguna modificación que la adorne. Y es que para esta música,  la serie es el ladrillo y las matemáticas son la pintura con la que decorarlos, ya que las transformaciones que se le puede aplicar a una serie forman preciosas estructuras matemáticas enmarcadas en la Teoría de Grupos.
  
-%	Este artículo es el primero de una colección sobre el serialismo musical y  las matemáticas que lo fundamentan. Las músicas serialistas son aquellas que permiten construir castillos con un solo grano de arena: una serie particular, una permutación de notas, dinámicas o timbres. La serie se coloca en la obra secuencialmente, una detrás de la misma, siempre igual o con alguna modificación que la adorne. Y es que para el serialismo la serie es el ladrillo y las matemáticas son la pintura con la que decorarlos, ya que las transformaciones que se le puede aplicar a una serie forman preciosas estructuras matemáticas enmarcadas en la Teoría de Grupos.
+%	Este artículo es el primero de una colección sobre el serialismo musical y  las matemáticas que lo fundamentan. Las músicas serialistas son aquellas que permiten construir castillos con un solo grano de arena: una serie particular, una permutación de notas, dinámicas o timbres. La serie se coloca en la obra secuencialmente, siempre igual o con alguna modificación que la adorne. Y es que para el serialismo la serie es el ladrillo y las matemáticas son la pintura con la que decorarlos, ya que las transformaciones que se le puede aplicar a una serie forman preciosas estructuras matemáticas enmarcadas en la Teoría de Grupos.
+	
+	En el primer artículo~\cite{celia1} nos centramos en el dodecafonismo, en sus orígenes y en comentar una de sus obras. 
+	En este segundo artículo, ampliaremos las definiciones dodecafónicas para descubrir bajo ellas, con ayuda de diagramas, el \textbf{grupo diédrico} (\hyperref[ch:grupo]{sección 2}); y contaremos quiénes fueron los discípulos y sucesores de Schoenberg y cómo provocaron la creación del \textbf{serialismo integral} (\hyperref[ch:serialismo]{sección 3}). 
+	Más adelante proporcionaremos las herramientas matemáticas para después contar el número de espectros seriales que un compositor puede utilizar. En definitiva, haremos un recorrido a fondo por el serialismo y exploraremos sus posibilidades musicales y matemáticas.
 	
 %	En estas estructuras se centrará esta serie de artículos, y más específicamente en el \textit{dodecafonismo}, el primer sistema compositivo serialista. En este primer artículo hablaremos sobre sus orígenes (\hyperref[ch:historia]{sección 2}) y sobre los postulados matemáticos que lo definieron (\hyperref[ch:dodecafonismo]{sección 3}), y analizaremos  una obra como ejemplo (\hyperref[ch:suite]{sección 4}). Más adelante generalizaremos las definiciones dodecafónicas matemáticamente, descubriremos la historia del \textit{serialismo integral}, y contaremos el número de posibles series distintas \textemdash o, más bien, de \textit{espectros seriales}\textemdash~que un compositor puede utilizar. En definitiva, haremos un recorrido a fondo por el serialismo y exploraremos sus posibilidades musicales y matemáticas.
 	
 %	Los textos irán dirigidos tanto a matemáticos como a músicos; en todas las entregas habrá secciones más matemáticas y secciones más musicales o históricas. Las matemáticas serán avanzadas, pero siempre se definirá todo lo que se utilice y se probará todo lo que se afirme. Algunas de las definiciones matemáticas más comunes se encuentran en la \hyperref[ch:suite]{sección 5}. ¡Que empiece el viaje!
 	
+%	Los textos irán dirigidos tanto a matemáticos como a músicos; en todas las entregas habrá secciones más matemáticas y secciones más musicales o históricas. Las matemáticas serán avanzadas, pero siempre se definirá todo lo que se utilice y se probará todo lo que se afirme. ¡Que empiece el viaje!
+		
 	\input{04.Grupo}%
 	\input{05.Serialismo}%
 	
