--- a/Entrega III/06.Acciones.tex
+++ b/Entrega III/06.Acciones.tex
@@ -1,32 +1,32 @@
-\section{M\'AS HERRAMIENTAS MATEM\'ATICAS}\label{ch:acciones}
+\section{Acciones, órbitas y estabilizadores}\label{ch:acciones}
 	\subsection{Acciones de grupos sobre conjuntos}
-		Dado un grupo $(G,\ *)$ y un conjunto $X$, la \emph{acci\'on} de $(G,\ *)$ sobre $X$ es una funci\'on $\phi$ que asocia un elemento $g \in G$ y un elemento $x \in X$ -- el par $(g,x)$ -- a otro elemento $g\cdot x$ que tambi\'en pertenece a $X$ \cite{armstrong}. $\phi :(g,x) \to g\cdot x$
+		Dado un grupo $(G,\ *)$ y un conjunto $X$, la \emph{acción} de $(G,\ *)$ sobre $X$ es una función $\phi$ que asocia un elemento $g \in G$ y un elemento $x \in X$ -- el par $(g,x)$ -- a otro elemento $g\cdot x$ que también pertenece a $X$ \cite{armstrong}. $\phi :(g,x) \to g\cdot x$
 	
-		La acci\'on $\phi$, expresada mediante la operaci\'on ($\cdot$), debe cumplir dos condiciones:
+		La acción $\phi$, expresada mediante la operación ($\cdot$), debe cumplir dos condiciones:
 		\begin{enumerate}
 			\item{Para todo $x\in X$, $e\cdot x=x$, siendo $e$ el elemento neutro del grupo.}
 		
-			\item{Para todo $x\in X$ y para todo par $g,h\in$ G, se debe cumplir que $(g*h)\cdot x=g\cdot (h\cdot x)$. La primera operaci\'on ($*$) es la interna del grupo G, y la segunda operaci\'on ($\cdot$) es la acci\'on.}
+			\item{Para todo $x\in X$ y para todo par $g,h\in$ G, se debe cumplir que $(g*h)\cdot x=g\cdot (h\cdot x)$. La primera operación ($*$) es la interna del grupo G, y la segunda operación ($\cdot$) es la acción.}
 		\end{enumerate}
-		Como ya se ha visto, las funciones $\{S,\ T,\ V,\ C\}$ forman el grupo di\'edrico ${D}_{n}\times{D}_{n}$, con $n$ la longitud de la serie. Se podr\'a definir entonces la acci\'on $\phi$ de este grupo sobre el conjunto de permutaciones de orden $n$, tal que $\phi(\Psi,\ \sigma)=\Psi\circ\sigma=\Psi(\sigma)=\tau$, con $\Psi\in{D}_{n}\times{D}_{n}$ y $\sigma,\tau\in{S}_n$.
+		Como ya se ha visto, las funciones $\{S,\ T,\ V,\ C\}$ forman el grupo diédrico ${D}_{n}\times{D}_{n}$, con $n$ la longitud de la serie. Se podrá definir entonces la acción $\phi$ de este grupo sobre el conjunto de permutaciones de orden $n$, tal que $\phi(\Psi,\ \sigma)=\Psi\circ\sigma=\Psi(\sigma)=\tau$, con $\Psi\in{D}_{n}\times{D}_{n}$ y $\sigma,\tau\in{S}_n$.
 		
-		De igual manera, se puede definir el grupo que forman solamente $I$ y $R$, que servir\'a m\'as adelante. Como son dos reflexiones, forman el conocido grupo de Klein \textemdash a partir de ahora denotado por $\Xi$, con elementos $Id$, $I$, $R$ e $IR$.
+		De igual manera, se puede definir el grupo que forman solamente $I$ y $R$, que servirá más adelante. Como son dos reflexiones, forman el conocido grupo de Klein \textemdash a partir de ahora denotado por $\Xi$, con elementos $Id$, $I$, $R$ e $IR$.
 
-	\subsection{\'Orbitas y estabilizadores}	
-		Dada una acci\'on de $(G,\ *)$ sobre $X$, la \emph{\'orbita} de un determinado elemento $x_0\in X$ es el subconjunto de elementos $x$ de $X$ que pueden ser alcanzados desde $x_0$ mediante alg\'un $g_0\in G$. Es decir, todos los $x$ para los que existe un $g_0$ que al actuar sobre $x_0$ da $x$. Trivialmente, $x_0\in Orb(x_0)$ ya que $e\cdot x_0=x_0$.
+	\subsection{Órbitas y estabilizadores}	
+		Dada una acción de $(G,\ *)$ sobre $X$, la \emph{órbita} de un determinado elemento $x_0\in X$ es el subconjunto de elementos $x$ de $X$ que pueden ser alcanzados desde $x_0$ mediante algún $g_0\in G$. Es decir, todos los $x$ para los que existe un $g_0$ que al actuar sobre $x_0$ da $x$. Trivialmente, $x_0\in Orb(x_0)$ ya que $e\cdot x_0=x_0$.
 		\[Orb(x_0)=\{x\in X :\ \exists \ g_0\in {G},\ g_0\cdot x_0 =x\}\]
 	
-		Por ejemplo, dada una permutaci\'on $\sigma$, todas las permutaciones a las que se llega desde $\sigma$ mediante alg\'un $\Psi\in{D}_{n}\times{D}_{n}$
-		conforman la \'orbita de $\sigma$. Por definici\'on, las series a las que se puede llegar desde una serie original conforman su espectro serial, por lo que \textbf{la \'orbita es en realidad el espectro serial}.
+		Por ejemplo, dada una permutación $\sigma$, todas las permutaciones a las que se llega desde $\sigma$ mediante algún $\Psi\in{D}_{n}\times{D}_{n}$
+		conforman la órbita de $\sigma$. Por definición, las series a las que se puede llegar desde una serie original conforman su espectro serial, por lo que \textbf{la órbita es en realidad el espectro serial}.
 	
-		Para el mismo $x_0$ se define su \emph{estabilizador} como el conjunto de elementos $g\in G$ que fijan $x_0$, es decir, que mandan $x_0$ a s\'i mismo. Mientras que una \'orbita es un subconjunto de $X$, un estabilizador es un subgrupo de $G$. Trivialmente, $e\in Stab(x)\ \forall x\in X$, porque el elemento identidad fija cualquier otro elemento por definici\'on.
+		Para el mismo $x_0$ se define su \emph{estabilizador} como el conjunto de elementos $g\in G$ que fijan $x_0$, es decir, que mandan $x_0$ a sí mismo. Mientras que una órbita es un subconjunto de $X$, un estabilizador es un subgrupo de $G$. Trivialmente, $e\in Stab(x)\ \forall x\in X$, porque el elemento identidad fija cualquier otro elemento por definición.
 		\[Stab(x_0)=\{g\in {G}\ :\ g\cdot x_0 =x_0 \}\]
 	
-		Si cada $g\in G$ llevara a $x_0$ a un $x$ distinto, el n\'umero de elementos de $Orb(x_0)$ ser\'ia igual al n\'umero de elementos de $G$. Sin embargo, si un elemento $g_0\in G$ fija $x_0$, entonces no dar\'a nuevos elementos en la \'orbita de $x$. Por tanto, intuitivamente el tama\~no de la \'orbita disminuye. De hecho,  el teorema de \'Orbita--Estabilizador dice que el tama\~no de una \'orbita ($|Orb(x_0)|$) ser\'a el tama\~no de $G$ $(|G|)$ entre el n\'umero de elementos que fijan $x_0$; es decir, el tama\~no de su estabilizador ($|Stab(x_0)|$). Adem\'as, es cierto para todo $x\in X$.
+		Si cada $g\in G$ llevara a $x_0$ a un $x$ distinto, el número de elementos de $Orb(x_0)$ sería igual al número de elementos de $G$. Sin embargo, si un elemento $g_0\in G$ fija $x_0$, entonces no dará nuevos elementos en la órbita de $x$. Por tanto, intuitivamente el tamaño de la órbita disminuye. De hecho,  el teorema de Órbita--Estabilizador dice que el tamaño de una órbita ($|Orb(x_0)|$) será el tamaño de $G$ $(|G|)$ entre el número de elementos que fijan $x_0$; es decir, el tamaño de su estabilizador ($|Stab(x_0)|$). Además, es cierto para todo $x\in X$.
 		\[|Orb(x)|=\frac{|{G}|}{|Stab(x)|}\mbox{, o lo que es lo mismo, }|{G}|=|Orb(x)||Stab(x)|\]
 		
 		\def\arraystretch{1.5}
-		Este teorema implica que los tama\~nos de cada \'orbita y cada estabilizador son divisores del tama\~no del grupo. Por ejemplo, como el tama\~no del grupo $\Xi$ es 4, cualquier estabilizador y cualquier \'orbita tendr\'an tama\~no 1, 2 o 4. En concreto, como $Id$ est\'a siempre en el estabilizador, para  todo $\sigma$ ser\'a de una de estas formas:
+		Este teorema implica que los tamaños de cada órbita y cada estabilizador son divisores del tamaño del grupo. Por ejemplo, como el tamaño del grupo $\Xi$ es 4, cualquier estabilizador y cualquier órbita tendrán tamaño 1, 2 o 4. En concreto, como $Id$ está siempre en el estabilizador, para  todo $\sigma$ será de una de estas formas:
 		\[\begin{array}{*{5}c}
 		|Stab|=1&&&\{{Id}\}&\\
 		\hline|Stab|=2&&\{Id,\ I\}&\{Id,\ R\}&\{Id,\ IR\}\\
@@ -34,18 +34,18 @@
 		\end{array}\]
 		
 		\def\arraystretch{1}
-		Una serie $\sigma$ sin simetr\'ias tendr\'a una serie distinta para cada una de sus transformaciones. Por tanto, su \'orbita ser\'a $\{\sigma,\ R(\sigma),\ I(\sigma),\ IR(\sigma)\}$ y su estabilizador ser\'a solamente \{$Id$\}. Cumple entonces el teorema: $4\cdot 1 = 4$.
+		Una serie $\sigma$ sin simetrías tendrá una serie distinta para cada una de sus transformaciones. Por tanto, su órbita será $\{\sigma,\ R(\sigma),\ I(\sigma),\ IR(\sigma)\}$ y su estabilizador será solamente \{$Id$\}. Cumple entonces el teorema: $4\cdot 1 = 4$.
 	
 	\subsection{El lema de Burnside}
 		\label{burnside}
-		Las \'orbitas, que son subconjuntos de $X$, forman una \emph{partici\'on} de $X$. Esto significa que son subconjuntos disjuntos: ning\'un $x$ puede estar en dos \'orbitas distintas. Interesa entonces saber cu\'antos subconjuntos hay; es decir, el n\'umero de \'orbitas ($\#Orb$). El lema de Burnside afirma que se pueden calcular as\'i:
+		Las órbitas, que son subconjuntos de $X$, forman una \emph{partición} de $X$. Esto significa que son subconjuntos disjuntos: ningún $x$ puede estar en dos órbitas distintas. Interesa entonces saber cuántos subconjuntos hay; es decir, el número de órbitas ($\#Orb$). El lema de Burnside afirma que se pueden calcular así:
 		\[\#Orb=\frac{1}{|{G}|}\sum_{x\in{X}}|{Stab}(x)|\]	
-		Se prueba de esta forma: por el teorema de \'Orbita--Estabilizador, $|{Stab}(x)|=\frac{|{G}|}{|Orb(x)|}$, por lo que la parte derecha se puede expresar as\'i:
+		Se prueba de esta forma: por el teorema de Órbita--Estabilizador, $|{Stab}(x)|=\frac{|{G}|}{|Orb(x)|}$, por lo que la parte derecha se puede expresar así:
 		\[\frac{1}{|{G}|}\sum_{x\in X}|{Stab}(x)|=
 		\frac{1}{|{G}|}\sum_{x\in X}\frac{|{G}|}{|Orb(x)|}=
 		\sum_{x\in X}\frac{1}{|Orb(x)|}\]
 
-		Como las \'orbitas forman una partici\'on de $X$, la suma sobre todo el conjunto $X$ puede ser dividida en sumas separadas para cada \'orbita. Adem\'as, si por cada elemento de una \'orbita se suma el inverso del n\'umero de elementos de la \'orbita, esa suma dar\'a uno. Solo queda ahora sumar uno por cada \'orbita.
-		\[\sum_{x\in X}\frac{1}{|Orb(x)|}=\sum_{{O}\in\mbox{\'Orbitas}}\left(\sum_{x\in{O}}\frac{1}{|{O}|}\right)=\sum_{O\in\mbox{\'Orbitas}}1=\#Orb \qquad\square\]	
+		Como las órbitas forman una partición de $X$, la suma sobre todo el conjunto $X$ puede ser dividida en sumas separadas para cada órbita. Además, si por cada elemento de una órbita se suma el inverso del número de elementos de la órbita, esa suma dará uno. Solo queda ahora sumar uno por cada órbita.
+		\[\sum_{x\in X}\frac{1}{|Orb(x)|}=\sum_{{O}\in\mbox{Órbitas}}\left(\sum_{x\in{O}}\frac{1}{|{O}|}\right)=\sum_{O\in\mbox{Órbitas}}1=\#Orb \qquad\square\]	
 	
-		Este lema permite calcular el n\'umero de posibles espectros seriales distintos, ya que el espectro de una serie es igual al espectro de sus series transformadas. Un compositor serialista debe entonces escoger no una serie original, sino el espectro con el que construir la obra. O, m\'as bien, si escoge una serie original est\'a escogiendo el mismo material que si escogiera otra serie de ese mismo espectro.
+		Este lema permite calcular el número de posibles espectros seriales distintos, ya que el espectro de una serie es igual al espectro de sus series transformadas. Un compositor serialista debe entonces escoger no una serie original, sino el espectro con el que construir la obra. O, más bien, si escoge una serie original está escogiendo el mismo material que si escogiera otra serie de ese mismo espectro.
