--- a/Entrega III/Serialismo-matematicas.bib
+++ b/Entrega III/Serialismo-matematicas.bib
@@ -34,3 +34,43 @@
 	url          = {\url{https://oeis.org/A000939/a000939.pdf}},
 	note = {\url{https://oeis.org/A000939/a000939.pdf}},
 }
+
+
+@misc{gom-1,
+author       = {Gómez, Paco},
+title        = {\textit{Mathematics and Computation in Music 2019}: un congreso interdisciplinar},
+howpublished = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18184:98-junio-2019-mathematics-and-computation-in-music-2019-un-congreso-interdisciplinar&catid=67:ma-y-matemcas&directory=67}},
+type         = {web page},
+url          = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18184:98-junio-2019-mathematics-and-computation-in-music-2019-un-congreso-interdisciplinar&catid=67:ma-y-matemcas&directory=67}},
+year         = {julio de 2019},
+note         = {Consultado en agosto de 2019}
+}
+
+@misc{gom-2,
+author       = {Gómez, Paco},
+title        = {\textit{Crónica del congreso Mathematics and Computation in Music 2019}},
+howpublished = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18206:99-agosto-2019-cronica-del-congreso-mathematics-and-computation-in-music-2019&catid=67:ma-y-matemcas&directory=67}},
+type         = {web page},
+url          = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18206:99-agosto-2019-cronica-del-congreso-mathematics-and-computation-in-music-2019&catid=67:ma-y-matemcas&directory=67}},
+year         = {julio de 2019},
+note         = {Consultado en agosto de 2019}
+} 
+
+@article{celia1,
+author       = {Rubio Madrigal, Celia},
+year         = {septiembre de 2019},
+title        = {{Serialismo y matemáticas - I}},
+journal      = {Divulgamat},
+url          = {\url{url}},
+note = {\url{url}}
+}
+
+
+@article{celia2,
+	author       = {Rubio Madrigal, Celia},
+	year         = {septiembre de 2019},
+	title        = {{Serialismo y matemáticas - II}},
+	journal      = {Divulgamat},
+	url          = {\url{url}},
+	note = {\url{url}}
+}
